--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 aiofiles==22.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
 aiosqlite==0.18.0
 albumentations==1.3.0
 anyio==3.6.2
@@ -6,25 +8,29 @@ argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.3
 asttokens==2.2.1
+async-timeout==4.0.2
 attrs==22.2.0
 Babel==2.11.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
 bleach==6.0.0
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
 cffi==1.15.1
 charset-normalizer==3.0.1
 colorama==0.4.6
 comm==0.1.2
 dadaptation==1.5
+datasets==2.12.0
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
+dill==0.3.6
 executing==1.2.0
 fastjsonschema==2.16.2
 filelock==3.9.0
 fqdn==1.5.1
-huggingface-hub==0.12.0
+frozenlist==1.3.3
+fsspec==2023.5.0
+huggingface-hub==0.14.1
 idna==3.4
 imageio==2.25.1
 importlib-metadata==6.0.0
@@ -51,10 +57,13 @@ jupyterlab==3.6.1
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.5
 jupyterlab_server==2.19.0
+kaggle==1.5.12
 lion-pytorch==0.0.4
 MarkupSafe==2.1.2
 matplotlib-inline==0.1.6
 mistune==2.0.5
+multidict==6.0.4
+multiprocess==0.70.14
 nbclassic==0.5.1
 nbclient==0.7.2
 nbconvert==7.2.9
@@ -78,11 +87,13 @@ prometheus-client==0.16.0
 prompt-toolkit==3.0.36
 psutil==5.9.4
 pure-eval==0.2.2
+pyarrow==12.0.0
 pycparser==2.21
 Pygments==2.14.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.6
+python-slugify==8.0.0
 pytz==2022.7.1
 PyWavelets==1.4.1
 pywin32==305
@@ -90,7 +101,9 @@ pywinpty==2.0.10
 PyYAML==6.0
 pyzmq==25.0.0
 qudida==0.0.4
+regex==2023.5.5
 requests==2.28.2
+responses==0.18.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 scikit-image==0.19.3
@@ -99,20 +112,24 @@ scipy==1.10.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.3.0
+Sophia-Optimizer==0.2.1
 soupsieve==2.4
 stack-data==0.6.2
 terminado==0.17.1
+text-unidecode==1.3
 threadpoolctl==3.1.0
 tifffile==2023.2.3
-timm==0.6.12
+timm @ git+https://github.com/rwightman/pytorch-image-models.git@709d5e0d9d2d3f501531506eda96a435737223a3
 tinycss2==1.2.1
+tokenizers==0.13.3
 tomli==2.0.1
 torch==1.13.1+cu117
 torchaudio==0.13.1+cu117
 torchvision==0.14.1+cu117
-tornado==6.2
+tornado==6.3.2
 tqdm==4.64.1
 traitlets==5.9.0
+transformers==4.29.2
 typing_extensions==4.5.0
 uri-template==1.2.0
 urllib3==1.26.14
@@ -123,6 +140,8 @@ websocket-client==1.5.1
 widgetsnbextension==4.0.5
 wincertstore==0.2
 xlrd==2.0.1
+xxhash==3.2.0
 y-py==0.5.5
+yarl==1.9.2
 ypy-websocket==0.8.2
 zipp==3.13.0
