--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,45 @@
-aiofiles==22.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-aiosqlite==0.18.0
 albumentations==1.3.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==22.2.0
-Babel==2.11.0
-backcall==0.2.0
-beautifulsoup4==4.11.2
-bleach==6.0.0
-cffi==1.15.1
-charset-normalizer==3.0.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
 colorama==0.4.6
-comm==0.1.2
-dadaptation==1.5
-datasets==2.12.0
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-dill==0.3.6
-executing==1.2.0
-fastjsonschema==2.16.2
+dadaptation==3.1
 filelock==3.9.0
-fqdn==1.5.1
-frozenlist==1.3.3
 fsspec==2023.5.0
-huggingface-hub==0.14.1
+huggingface-hub==0.15.1
 idna==3.4
-imageio==2.25.1
-importlib-metadata==6.0.0
-ipykernel==6.21.2
-ipython==8.10.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-jedi==0.18.2
+imageio==2.30.0
 Jinja2==3.1.2
 joblib==1.2.0
-json5==0.9.11
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.5.0
-jupyter-ydoc==0.2.2
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server==2.3.0
-jupyter_server_fileid==0.6.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.6.1
-jupyterlab==3.6.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
-jupyterlab_server==2.19.0
-kaggle==1.5.12
-lion-pytorch==0.0.4
+lazy_loader==0.2
+lion-pytorch==0.1.2
 MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mistune==2.0.5
-multidict==6.0.4
-multiprocess==0.70.14
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
+mpmath==1.2.1
 networkx==3.0
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.24.2
-opencv-python==4.7.0.68
-opencv-python-headless==4.7.0.68
-packaging==23.0
-pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.4.0
-platformdirs==3.0.0
-polars==0.16.5
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-psutil==5.9.4
-pure-eval==0.2.2
-pyarrow==12.0.0
-pycparser==2.21
-Pygments==2.14.0
-pyrsistent==0.19.3
+numpy==1.24.1
+opencv-python==4.7.0.72
+opencv-python-headless==4.7.0.72
+packaging==23.1
+pandas==2.0.2
+Pillow==10.0.1
 python-dateutil==2.8.2
-python-json-logger==2.0.6
-python-slugify==8.0.0
-pytz==2022.7.1
+pytz==2023.3
 PyWavelets==1.4.1
-pywin32==305
-pywinpty==2.0.10
 PyYAML==6.0
-pyzmq==25.0.0
 qudida==0.0.4
-regex==2023.5.5
-requests==2.28.2
-responses==0.18.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-image==0.19.3
-scikit-learn==1.2.1
-scipy==1.10.0
-Send2Trash==1.8.0
+requests==2.28.1
+safetensors==0.3.1
+scikit-image==0.21.0
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4
-stack-data==0.6.2
-terminado==0.17.1
-text-unidecode==1.3
+sympy==1.11.1
 threadpoolctl==3.1.0
-tifffile==2023.2.3
-timm @ git+https://github.com/rwightman/pytorch-image-models.git@709d5e0d9d2d3f501531506eda96a435737223a3
-tinycss2==1.2.1
-tokenizers==0.13.3
-tomli==2.0.1
-torch==1.13.1+cu117
-torchaudio==0.13.1+cu117
-torchvision==0.14.1+cu117
-tornado==6.3.2
-tqdm==4.64.1
-traitlets==5.9.0
-transformers==4.29.2
-typing_extensions==4.5.0
-uri-template==1.2.0
-urllib3==1.26.14
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
-widgetsnbextension==4.0.5
-wincertstore==0.2
-xlrd==2.0.1
-xxhash==3.2.0
-y-py==0.5.5
-yarl==1.9.2
-ypy-websocket==0.8.2
-zipp==3.13.0
+tifffile==2023.4.12
+timm @ git+https://github.com/huggingface/pytorch-image-models.git@2d0dbd17e388953ab81a5c56f80074eff962ea6b
+torch==2.0.1+cu118
+torchaudio==2.0.2+cu118
+torchvision==0.15.2+cu118
+tqdm==4.65.0
+typing_extensions==4.4.0
+tzdata==2023.3
+urllib3==1.26.13
